--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,31 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - echo Logging in to Amazon ECR...
+      - aws --version
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - REPOSITORY_URI=665338557965.dkr.ecr.sa-east-1.amazonaws.com/forex-service
+      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
-      - mvn clean 
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - mvn clean
+      - mvn package
+      - mv target/forex-service-0.0.1-SNAPSHOT.jar forex-service-0.0.1-SNAPSHOT.jar          
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn package
-      - mv target/forex-service-0.0.1-SNAPSHOT.jar forex-service-0.0.1-SNAPSHOT.jar
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"forex-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-   files:
-      - forex-service-0.0.1-SNAPSHOT.jar
+    files: 
+      - imagedefinitions.json
+      - forex-service-0.0.1-SNAPSHOT.jar   
